refactor to have routes

--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.4.0",
+    "@types/react-router-dom": "^5.3.3",
     "@types/three": "^0.180.0",
     "leva": "^0.10.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-router-dom": "^7.9.5",
     "three": "^0.180.0"
   },
   "devDependencies": {
